# articubot_one

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.jetson.yml  docker-compose.yaml  package.xml
.devcontainer/: Dockerfile  compose.yaml  devcontainer.jetson.json  devcontainer.json  docker-compose.jetson.yml  docker-compose.yaml
description/: robot.urdf.xacro  robot_core.xacro
install/: local_setup.sh  setup.sh
install/articubot_one/share/articubot_one/: local_setup.sh  package.sh
install/articubot_one/share/articubot_one/description/: robot_core.xacro
install/articubot_one/share/articubot_one/launch/: sim.launch.py
launch/: sim.launch.py
log/: latest_build  latest_list
models/Ground_Plane/: model.config
src/: CMakeLists.txt  package.xml
src/articubot_one/: CMakeLists.txt  package.xml
src/articubot_one/config/: bridge_ros2_control.yaml  sim_controllers.yaml  static_transforms.yaml
src/articubot_one/description/: camera.xacro  cameras.xacro  gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
src/articubot_one/launch/: robot_state_publisher.launch.py  sim.launch.py
src/articubot_one/models/Ground_Plane/: model.config  model.sdf
src/articubot_one/models/Sun/: model.sdf
src/articubot_one/scripts/: spawn_entity_client.py
src/articubot_one/worlds/: empty_plane.world
src/description/: gazebo_control.xacro  lidar.xacro
src/worlds/: empty.world
worlds/: empty.world
